--- a/notebooks/toen_model_part3.ipynb
+++ b/notebooks/toen_model_part3.ipynb
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "83bdee1d",
+   "id": "39f7984c",
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "85c24b3d",
+   "id": "c7523466",
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "21c8cfa1",
+   "id": "986352d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "07eaa8d3",
+   "id": "80da5703",
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "9b28c4e6",
+   "id": "18535882",
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "b3a8f0d8",
+   "id": "8978fe51",
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e62d30ab",
+   "id": "29e75835",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "436752a8",
+   "id": "c2fdfa45",
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "80a573c6",
+   "id": "714e4db4",
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "ef96511c",
+   "id": "22d4f4cc",
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "03ca948f",
+   "id": "27413d16",
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "ba8cf9aa",
+   "id": "1fb54dd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "533c49c7",
+   "id": "9af557e7",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "0fb3278d",
+   "id": "b1895231",
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "2dfd7030",
+   "id": "e49d6aea",
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1196,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "9f006e50",
+   "id": "faac11a6",
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "123196af",
+   "id": "92930d72",
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1245,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "436aa358",
+   "id": "b014155a",
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "eef2bbf1",
+   "id": "9c1cbcb7",
    "metadata": {},
    "outputs": [
     {
@@ -1354,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "096f5785",
+   "id": "d0c86870",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1364,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "81d077af",
+   "id": "eb80d360",
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1456,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "8a40e435",
+   "id": "cd4f7c8c",
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1483,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "6b1fcd03",
+   "id": "6cb50683",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "bf74aa9e",
+   "id": "82149ff1",
    "metadata": {},
    "outputs": [
     {
@@ -1688,7 +1688,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "3b182fde",
+   "id": "e5f28964",
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "2c5a38dc",
+   "id": "dbd51d6e",
    "metadata": {},
    "outputs": [
     {
@@ -1816,7 +1816,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "9fed2359",
+   "id": "4aad1aa7",
    "metadata": {},
    "outputs": [
     {
@@ -1837,7 +1837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc77ee45",
+   "id": "4f2f6b87",
    "metadata": {},
    "source": [
     "#as all the variables are low perfringfor the Hamming_loss the best is the discharge instruction we will use that for other models"
@@ -1846,7 +1846,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "a079da50",
+   "id": "62fff496",
    "metadata": {},
    "outputs": [
     {
@@ -1887,7 +1887,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "ee8292cc",
+   "id": "36059556",
    "metadata": {},
    "outputs": [
     {
@@ -1965,7 +1965,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "9daf5aef",
+   "id": "b5d43dbb",
    "metadata": {},
    "outputs": [
     {
@@ -1987,7 +1987,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "a39d1067",
+   "id": "aec0dbdb",
    "metadata": {},
    "outputs": [
     {
@@ -2066,30 +2066,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "id": "38e764d1",
+   "execution_count": 164,
+   "id": "cce2461c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Score with the discharge_instruction and liner-SVC is 0.26110035913425234\n",
-      "Hamming_loss with the discharge_instruction and liner-SVC is 0.2251205178152056\n"
+      "Accuracy Score with the discharge_instruction and log_reg is 0.2608418879888222\n",
+      "Hamming_loss with the discharge_instruction and log_reg is 0.22507586977570102\n"
      ]
     }
    ],
    "source": [
     "y_pred8 = logreg_pred.to_numpy()\n",
     "\n",
-    "print('Accuracy Score with the discharge_instruction and liner-SVC is',  Accuracy(y_true, y_pred8))\n",
-    "print('Hamming_loss with the discharge_instruction and liner-SVC is', Hamming_Loss(y_true,y_pred8))"
+    "print('Accuracy Score with the discharge_instruction and log_reg is',  Accuracy(y_true, y_pred8))\n",
+    "print('Hamming_loss with the discharge_instruction and log_reg is', Hamming_Loss(y_true,y_pred8))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "4c0924cc",
+   "id": "51a9df7f",
    "metadata": {},
    "outputs": [
     {
@@ -2126,7 +2126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5e0954f",
+   "id": "c9d30374",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2148,7 +2148,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "deb78fad",
+   "id": "ba6d42a3",
    "metadata": {},
    "outputs": [
     {
@@ -2189,7 +2189,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "02baa928",
+   "id": "d19fce5c",
    "metadata": {},
    "outputs": [
     {
@@ -2229,7 +2229,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "57515613",
+   "id": "e1d0df92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2239,7 +2239,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "456c6bb7",
+   "id": "1869a89e",
    "metadata": {},
    "outputs": [
     {
@@ -3263,7 +3263,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "79c4544e",
+   "id": "15758820",
    "metadata": {},
    "outputs": [
     {
@@ -3284,7 +3284,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "3c63e23b",
+   "id": "aae17947",
    "metadata": {},
    "outputs": [
     {
@@ -3411,7 +3411,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "bddaff69",
+   "id": "1c03c814",
    "metadata": {},
    "outputs": [
     {
@@ -3490,7 +3490,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "4e39face",
+   "id": "783ad3d6",
    "metadata": {},
    "outputs": [
     {
@@ -3570,8 +3570,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "id": "6cc72521",
+   "execution_count": 161,
+   "id": "b35e8b07",
    "metadata": {},
    "outputs": [
     {
@@ -3626,38 +3626,32 @@
        "      <td>130108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>8543</th>\n",
+       "      <td>blood</td>\n",
+       "      <td>117235</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34708</th>\n",
-       "      <td>nauesea</td>\n",
-       "      <td>1</td>\n",
+       "      <th>25685</th>\n",
+       "      <td>hospital</td>\n",
+       "      <td>117127</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34707</th>\n",
-       "      <td>nauesa3</td>\n",
-       "      <td>1</td>\n",
+       "      <th>3553</th>\n",
+       "      <td>admitted</td>\n",
+       "      <td>109765</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13111</th>\n",
-       "      <td>conspitated</td>\n",
-       "      <td>1</td>\n",
+       "      <th>51766</th>\n",
+       "      <td>taking</td>\n",
+       "      <td>97835</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34705</th>\n",
-       "      <td>naueated</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58551</th>\n",
-       "      <td>único</td>\n",
-       "      <td>1</td>\n",
+       "      <th>32364</th>\n",
+       "      <td>medication</td>\n",
+       "      <td>97105</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>57756 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -3667,17 +3661,14 @@
        "32439  medications     136740\n",
        "51725         take     135471\n",
        "10035         care     130108\n",
-       "...            ...        ...\n",
-       "34708      nauesea          1\n",
-       "34707      nauesa3          1\n",
-       "13111  conspitated          1\n",
-       "34705     naueated          1\n",
-       "58551        único          1\n",
-       "\n",
-       "[57756 rows x 2 columns]"
+       "8543         blood     117235\n",
+       "25685     hospital     117127\n",
+       "3553      admitted     109765\n",
+       "51766       taking      97835\n",
+       "32364   medication      97105"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3685,7 +3676,7 @@
    "source": [
     "#Non numeric toekns in the discharge_instructions\n",
     "(word_counts[~word_counts['words'].str.isnumeric()].\n",
-    " sort_values('frequency',ascending=False)\n",
+    " sort_values('frequency',ascending=False).head(10)\n",
     ")\n",
     "\n",
     "#there are 57756 non-numeric tokens"
@@ -3694,7 +3685,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "0db5121f",
+   "id": "47b25364",
    "metadata": {},
    "outputs": [
     {
@@ -3718,7 +3709,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "730daddc",
+   "id": "d34a546a",
    "metadata": {},
    "outputs": [
     {
@@ -3742,7 +3733,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "abee08ff",
+   "id": "645a8465",
    "metadata": {},
    "outputs": [
     {
@@ -3768,7 +3759,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "7d6b4365",
+   "id": "9d0b0e6a",
    "metadata": {},
    "outputs": [
     {
@@ -3844,6 +3835,168 @@
     "\n",
     "print(logreg_pred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "96f9c156",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(176840,)\n",
+      "(87101,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "train, test = train_test_split(df4model, random_state=42, test_size=0.33, shuffle=True)\n",
+    "X_train = train.dis_instr_nonumber.fillna(' ').str.lower()\n",
+    "X_test = test.dis_instr_nonumber.fillna(' ').str.lower()\n",
+    "y_train = train[categories]\n",
+    "y_test = test[categories]\n",
+    "\n",
+    "print(X_train.shape)\n",
+    "print(X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "95ce478f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "... Processing icd_E11\n",
+      "Test accuracy is 0.7144234853790428\n",
+      "... Processing icd_E78\n",
+      "Test accuracy is 0.6144131525470431\n",
+      "... Processing icd_E87\n",
+      "Test accuracy is 0.8027806799003456\n",
+      "... Processing icd_F32\n",
+      "Test accuracy is 0.8003352429937659\n",
+      "... Processing icd_I16\n",
+      "Test accuracy is 0.7136657443657364\n",
+      "... Processing icd_I50\n",
+      "Test accuracy is 0.8564195589028829\n",
+      "... Processing icd_N17\n",
+      "Test accuracy is 0.8412991814100872\n",
+      "... Processing icd_Y92\n",
+      "Test accuracy is 0.8274187437572473\n",
+      "... Processing icd_Z85\n",
+      "Test accuracy is 0.8035728636869841\n",
+      "       icd_E11  icd_E78  icd_E87  icd_F32  icd_I16  icd_I50  icd_N17  icd_Y92  \\\n",
+      "0            0        0        0        0        0        0        0        0   \n",
+      "1            0        0        0        0        1        0        0        0   \n",
+      "2            0        1        0        0        1        0        0        0   \n",
+      "3            0        0        1        0        0        0        1        0   \n",
+      "4            0        0        0        0        0        0        0        0   \n",
+      "...        ...      ...      ...      ...      ...      ...      ...      ...   \n",
+      "87096        0        0        1        0        0        0        0        0   \n",
+      "87097        0        1        0        0        0        0        0        0   \n",
+      "87098        0        0        1        0        0        0        0        0   \n",
+      "87099        0        0        1        0        0        0        0        0   \n",
+      "87100        0        1        0        0        0        1        1        0   \n",
+      "\n",
+      "       icd_Z85  \n",
+      "0            0  \n",
+      "1            0  \n",
+      "2            0  \n",
+      "3            0  \n",
+      "4            0  \n",
+      "...        ...  \n",
+      "87096        0  \n",
+      "87097        0  \n",
+      "87098        0  \n",
+      "87099        0  \n",
+      "87100        0  \n",
+      "\n",
+      "[87101 rows x 9 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "LogReg_pipeline = Pipeline([\n",
+    "                ('tfidf', TfidfVectorizer(stop_words=list(stop_words))),\n",
+    "                ('clf', OneVsRestClassifier(LogisticRegression(solver='sag'), n_jobs=1)),\n",
+    "            ])\n",
+    "\n",
+    "var_pre = {}\n",
+    "\n",
+    "for category in categories:\n",
+    "    print('... Processing {}'.format(category))\n",
+    "    # train the model using X_dtm & y\n",
+    "    LogReg_pipeline.fit(X_train, train[category])\n",
+    "    # compute the testing accuracy\n",
+    "    prediction = LogReg_pipeline.predict(X_test)\n",
+    "    var_pre[category] = prediction\n",
+    "    print('Test accuracy is {}'.format(accuracy_score(test[category], prediction)))\n",
+    "\n",
+    "logreg_pred = pd.DataFrame(var_pre)\n",
+    "\n",
+    "print(logreg_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "b09c0031",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Score with the discharge_instruction and liner-SVC is 0.2608438014762295\n",
+      "Hamming_loss with the discharge_instruction and liner-SVC is 0.22507459411742944\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred9 = logreg_pred.to_numpy()\n",
+    "\n",
+    "print('Accuracy Score with the discharge_instruction and liner-SVC is',  Accuracy(y_true, y_pred9))\n",
+    "print('Hamming_loss with the discharge_instruction and liner-SVC is', Hamming_Loss(y_true,y_pred9))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51acc164",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#we are going to use the "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3f89779",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ed4bfe3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f2b6bbd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
