--- a/notebooks/toen_model_part3.ipynb
+++ b/notebooks/toen_model_part3.ipynb
@@ -3960,8 +3960,8 @@
    "source": [
     "y_pred9 = logreg_pred.to_numpy()\n",
     "\n",
-    "print('Accuracy Score with the discharge_instruction and liner-SVC is',  Accuracy(y_true, y_pred9))\n",
-    "print('Hamming_loss with the discharge_instruction and liner-SVC is', Hamming_Loss(y_true,y_pred9))"
+    "print('Accuracy Score with the discharge_instruction and log_reg is',  Accuracy(y_true, y_pred9))\n",
+    "print('Hamming_loss with the discharge_instruction and log_reg is', Hamming_Loss(y_true,y_pred9))"
    ]
   },
   {
